src/objects/Station_Company__c.object
<CustomObject>
    <fields>
        <fullName>CompanyEXID__c</fullName>
        <externalId>true</externalId>
        <label>事業者外部ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Kana__c</fullName>
        <label>カナ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>正式名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>タイプ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Station Company</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>事業者名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Station Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>